--- a/01_StructuralHTML/starter/index.html
+++ b/01_StructuralHTML/starter/index.html
@@ -7,31 +7,32 @@
     <title>Structural HTML</title>
 </head>
 <body>
-    <div id="heading">
+    <heaing id="heading">
         <h1>My Blog Posts</h1>
-    </div>
-    <div id="latestPostsSection">
-        <div id="sectionHeader">
+        <a href="courses.html"></a>
+    </section>
+    <section id="latestPostsSection">
+        <sectiomn header id="sectionHeader">
             <h2>Latest Post</h2>
         </div>
-        <div id="article">
-            <div id="articleHeader">
+        <article id="article">
+            <articleheader id="articleHeader">
                 <h3>My HTML5 Blog</h3>
                 <p>Date: 3rd October</p>
-            </div>
-            <div id="mainArticle">
+            </article>
+            <article id="mainArticle">
                 <h4>My HTML5 Musings</h4>
                 <p id="intro">This is my introduction to HTML5</p>
                 <p id="postBody">This is the body of my post</p>
                 <p id="conclusion">This is the conclusion of my post</p>
-            </div>
-            <div id="articleFooter">
-                <div id="address">
+            </articlefooter>
+            <articlefooter id="articleFooter">
+                <address id="address">
                     <a href="#">Posted in HTML5 stuff</a>
-                </div>
-            </div>
-        </div>
-    </div>
+                </address>
+            </article>
+        <section>
+    </section>
     <footer id="footer">
         <p>My Social Media Links go here!</p>
     </footer>
