--- a/03_Images/starter/team.html
+++ b/03_Images/starter/team.html
@@ -12,7 +12,7 @@
     <article>
         <header>
             <h1>Meet the Team</h1>
-            <!--theTeam image-->
+            <img src="images/theTeam.jpg">
         </header>
         <section>
             <h2>Technical IT</h2>
