--- a/02_Hyperlinks/starter/index.html
+++ b/02_Hyperlinks/starter/index.html
@@ -7,6 +7,7 @@
 
 <body>
     <header>
+        <a href="./courses.html">Courses</a>
         <h1>Award-winning professional training</h1>
     </header>
     <article>
