--- a/02_Hyperlinks/starter/courses.html
+++ b/02_Hyperlinks/starter/courses.html
@@ -44,5 +44,12 @@
             </p>
         </section>
     </article>
+    <footer>
+        <hr>
+        <p>
+            If you have any queries or comments, please contact:<br>
+            <a href="mailto:Sheldon.Cooper@qa.com"></a> 
+        </p>
+    </footer>
 </body>
 </html>
