--- a/02_Hyperlinks/starter/index.html
+++ b/02_Hyperlinks/starter/index.html
@@ -38,7 +38,7 @@
         <hr>
         <p>
             If you have any queries or comments, please contact:<br>
-            Sheldon Cooper, Webmaster
+            <a href="mailto:Sheldon.Cooper@qa.com"> Sheldon Cooper</a> Webmaster
         </p>
     </footer>
 </body>
