--- a/07_TextColourSizing/starter/index.html
+++ b/07_TextColourSizing/starter/index.html
@@ -6,12 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>QuickLab 07 - Text, Colours and Sizing</title>
     <style>
+        header h1 {
+            text-shadow: 5px 3px hotpink;
+            color: darkblue;
+            font-family: Helvetica;
+            background-color: rgba(200, 200, 200, 1);
+            font-size: 48pt;
+            text-align: center;
+        }
         
+        h1 {
+            font-family: Arial;
+            font-size: 2em;
+        }
+        p.first {
+            text-indent: 30px;
+            color: rgba(255, 0,0,0.5);
+            text-align: justify;
+        }
+       
+        h2, h3 {
+            text-align: right;
+            font-family: "Courier New";
+            background-color: rgba(127, 127, 127, 0.5);
+        }
+        p#highlightme {
+            background-color: hsla(45, 100%, 50%);
+            line-height: 30px;
+            width: 50%;
+
+        }
+        footer > p {
+            background-color: hsla(330, 100%, 71%, 1);
+            font-family: sans-serif;
+            text-align: center;
+            text-transform: uppercase;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Lorem ipsum dolor sit.</h1>
+        <h1></h1>    Lorem ipsum dolor sit.</h1>
     </header>
     <h1>Lorem ipsum dolor sit amet.</h1>
     <p class="first">
