--- a/06_Selectors/starter/index.html
+++ b/06_Selectors/starter/index.html
@@ -3,39 +3,39 @@
 <head>
     <title>Quick Lab 6 - CSS Selectors</title>
     <style>
-        { color: fuchsia; }     /** Anything emboldened **/
-        { color: midnightblue; }        /** Anything emboldened inside a paragraph **/
-        { color: purple; }      /** Any footer that is a direct child of body **/
-        { color: teal; }        /** Any paragraph that is a direct sibling of a heading 1 **/
-        { color: yellow; }      /** Any paragraph that is a younger sibling of a heading 1 **/
-        { color: navy; }        /** Any paragraph that has a class of interactive **/
-        { color: lime;}         /** Any paragraph that has a class of interactive and hovered over **/
-        { color: red;}          /** An element with an id of special **/
+       em { color: fuchsia; }     /** Anything emboldened **/
+       p em { color: midnightblue; }        /** Anything emboldened inside a paragraph **/
+       body > footer { color: purple; }      /** Any footer that is a direct child of body **/
+        h1 + p { color: teal; }        /** Any paragraph that is a direct sibling of a heading 1 **/
+       h1 ~ p { color: yellow; }      /** Any paragraph that is a younger sibling of a heading 1 **/
+       p class="interactive" { color: navy; }        /** Any paragraph that has a class of interactive **/
+       p class="interactive" :hover { color: lime;}         /** Any paragraph that has a class of interactive and hovered over **/
+       #special { color: red;}          /** An element with an id of special **/
         
-        {                       /** Any articles, headers, navs, uls, lis and footers **/
+       article, header, nav, ul, li, footer {                       /** Any articles, headers, navs, uls, lis and footers **/
             margin: 1em;
             padding: 1em;
             outline: 4px dashed black;
         }
         
         {                       /** Any links **/
-            color: blue;
+           a color: blue;
         }
 
         {                       /** Any unordered list that is a child of a nav **/
-            list-style: none;
+         nav >ul   list-style: none;
         }
 
-        { background-color: #0094ff; }        /** First-child list items **/
-        { background-color: #0094ff; }        /** Last-child list items **/ 
-        { background-color: #0094ff; }        /** Third-child list items **/
-        { background-color: #b6ff00; }        /** Odd-children list items **/
-        { background-color: #1d1bc6; }        /** Even-children list items **/
-        { background-color: #ff0000; }        /** Everything but the first-child list item **/
-        { background-color: #00ff00; }        /** The first paragraph **/
-        { background-color: #0000ff; }        /** The last paragraph **/
-        { background-color: aquamarine; }     /** A label with a for attribute of name **/
-        { background-color: hotpink; }        /** An input with a type attribute of email **/
+       li :first-child { background-color: #0094ff; }        /** First-child list items **/
+       li :last-child { background-color: #0094ff; }        /** Last-child list items **/ 
+       li :nth-child(3) { background-color: #0094ff; }        /** Third-child list items **/
+       li :nth-child(odd)) { background-color: #b6ff00; }        /** Odd-children list items **/
+       li :nth-child(even)) { background-color: #1d1bc6; }        /** Even-children list items **/
+       li :not(:first-child) { background-color: #ff0000; }        /** Everything but the first-child list item **/
+       p:first-of-type { background-color: #00ff00; }        /** The first paragraph **/
+       p:last-of-type { background-color: #0000ff; }        /** The last paragraph **/
+       label for="name" { background-color: aquamarine; }     /** A label with a for attribute of name **/
+       input type="email" { background-color: hotpink; }        /** An input with a type attribute of email **/
     </style>
 </head>
 <body>
